--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/common": "^8.0.2",
     "@angular/compiler": "^8.0.2",
     "@angular/core": "^8.0.2",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "^8.0.2",
     "@angular/http": "^8.0.0-beta.10",
     "@angular/platform-browser": "^8.0.2",
@@ -44,6 +45,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
+    "firebase": "^7.1.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
