--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coreui/coreui-free-angular-admin-template",
+  "name": "purse-diverse",
   "version": "2.5.2",
   "description": "CoreUI Free Angular 2+ Admin Template",
   "author": {
