--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.0.0",
+    "ngx-mask": "^8.1.2",
     "ngx-perfect-scrollbar": "^8.0.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
