--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "@ngu/carousel": "^1.5.5",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
     "firebase": "^7.1.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
