--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.11",
+    "@angular/animations": "^8.2.13",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.11",
     "@angular/compiler": "^8.2.11",
@@ -26,6 +26,7 @@
     "@angular/fire": "^5.2.1",
     "@angular/forms": "^8.2.11",
     "@angular/http": "^8.0.0-beta.10",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.11",
     "@angular/platform-browser-dynamic": "^8.2.11",
     "@angular/router": "^8.2.11",
