--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@coreui/icons": "0.3.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngu/carousel": "^1.5.5",
+    "angular-bootstrap-md": "^8.6.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.10",
