--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "@google-cloud/storage": "^4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngu/carousel": "^1.5.5",
     "angular-bootstrap-md": "^8.6.0",
+    "angularfire2": "^5.2.3",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.10",
-    "firebase": "^7.2.1",
+    "firebase": "^7.4.0",
     "flag-icon-css": "^3.4.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
