--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
     "ng2-currency-mask": "^5.3.1",
+    "ng4-loading-spinner": "^1.2.3",
     "ngb-modal": "^2.0.3",
     "ngx-bootstrap": "^5.2.0",
     "ngx-mask": "^8.1.2",
@@ -57,6 +58,7 @@
     "ngx-spinner": "^8.0.3",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
+    "quill": "^1.3.7",
     "rxjs": "^6.5.3",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
