--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@google-cloud/storage": "^4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngu/carousel": "^1.5.5",
+    "angular-alert-module": "^2.0.3",
     "angular-bootstrap-md": "^8.6.0",
     "angularfire2": "^5.2.3",
     "bootstrap": "^4.3.1",
@@ -52,12 +53,15 @@
     "ng2-currency-mask": "^5.3.1",
     "ng4-loading-spinner": "^1.2.3",
     "ngb-modal": "^2.0.3",
+    "ngx-alerts": "^4.0.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-growl": "^1.0.3",
     "ngx-mask": "^8.1.2",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-spinner": "^8.0.3",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
+    "primeng-advanced-growl": "^4.1.3",
     "quill": "^1.3.7",
     "rxjs": "^6.5.3",
     "simple-line-icons": "^2.4.1",
