refactor(Admin-Dashboard) rename authors, rename panel into maintenance purse

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Purse Diverse",
   "author": {
-    "name": "Łukasz Holeczek"
+    "name": "Bryan, Arjay and Christian"
   },
   "homepage": "",
   "copyright": "",
