--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.6.11",
-    "firebase": "^7.7.0",
     "file-saver": "^2.0.2",
+    "firebase": "^7.7.0",
     "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "moment": "^2.24.0",
     "mutationobserver-shim": "^0.3.3",
     "ng2-charts": "^2.3.0",
@@ -60,17 +61,18 @@
     "ngx-mask": "^8.1.7",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-spinner": "^8.1.0",
+    "ngx-toastr": "^12.0.0",
+    "npm": "^6.13.7",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
-    "primeng-advanced-growl": "^4.1.3",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.2",
-    "xlsx": "^0.15.1"
+    "xlsx": "^0.15.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.2",
